Fix valign

--- a/static/stylesheets/custom_gr6.css
+++ b/static/stylesheets/custom_gr6.css
@@ -112,12 +112,13 @@
   display: flex;
   gap: 8px;
   justify-content: flex-start;
+  align-items: flex-start;
   align-self: center;
 }
 
 .home-menu-item-title-text {
   line-height: 1.2;
-  padding-top: 2px;
+  margin-top: 2px;
   flex: 1;
 }
 
@@ -437,7 +438,7 @@
 
   .home-menu-item-title-text {
     flex: 1;
-    padding-top: 1px;
+    margin-top: 1px;
     font-size: 1.25rem;
   }
 
